Temporary solution to prevent overlap in PM section

--- a/theme/layout_pages.css
+++ b/theme/layout_pages.css
@@ -113,7 +113,7 @@ li.activetab strong, #active-subsection strong,
 */
 div.cp-panel {
     background: none;
-    padding: 0 155px 0 0;
+    padding: 0 160px 0 0;
     max-width: 100%;
 }
 p.linkmcp { color: #444; }
